vlib/v/checker/tests/import_symbol_type_err.out
vlib/v/checker/tests/import_symbol_type_err.vv:1:17: error: module `crypto` has no type `Coin`
    1 | import crypto { Coin }
      |                 ~~~~
    2 | fn main() {
    3 |   println(Coin{})
vlib/v/checker/tests/import_symbol_type_err.vv:3:11: error: unknown struct: crypto.Coin
    1 | import crypto { Coin }
    2 | fn main() {
    3 |   println(Coin{})
      |           ~~~~~~
    4 | }
